[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 61.0"]

[project]
authors = [
  {"name" = "Kin Long Kelvin Lee", "email" = "kin.long.kelvin.lee@gmail.com"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
]
dependencies = [
    "lxml",
    "pandas",
    "numpy"
]
description = "Python interface/wrapper for rotational spectral simulations with PGopher"
dynamic = ["version", "readme"]
keywords = ["spectroscopy", "physical-chemistry", "rotational-spectroscopy"]
license = {file = "LICENSE.md"}
name = "pygopher"
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
  "black>=23.9.0",
  "flake8",
  "flake8-pyproject",
  "flake8-black",
  "flake8-bandit",
  "pre-commit",
  "bandit",
  "pytest"
]

[tool.setuptools.packages.find]
include = ["pygopher*"]
where = ["."]

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}
version = {attr = "pygopher.__version__"}
